# sidekick

./: package-lock.json  package.json
scripts/: tauri-wrapper.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  models.rs
src-tauri/whisper_worker/: Cargo.toml
src-tauri/whisper_worker/src/: main.rs
