[workspace]
members = [
    ".",
    "whisper_worker"
]

[package]
name = "sidekick"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
screencapturekit = "8.0.0"
llama-cpp-2 = { version = "0.1", features = ["metal"] }
futures = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
encoding_rs = "0.8"





